<resources>
    <string name="app_name">Give me light</string>

    <string name="flashlight_txt">Flashlight</string>
    <string name="space"> </string>
    <string name="Light_board_txt">Light board controls</string>
    <string name="show_lb_button_txt">View light board</string>
    <string name="set_color_txt">Colour settings:</string>
    <string name="red_txt">Red</string>
    <string name="green_txt">Green</string>
    <string name="blue_txt">Blue</string>
    <string name="alpha_txt">Alpha</string>
    <string name="title_activity_light_board">LightBoard</string>

    <string name="flashlightImgDesc">An image showing if the flashlight is on or off</string>
    <string name="flash_error_message">Sorry, your device does not support flash light!</string>
    <string name="divImageTxt">An image to make up a border</string>

    <string name="only_landscape">Landscape view</string>
    <string name="only_portrait">Portrait view</string>
    <string name="lock_layout">Lock view</string>
    <string name="unlock_layout">Unlock view</string>
</resources>
