<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    android:orientation="horizontal"
    tools:context="joensson.klas.givemelight.MainActivity"
    android:weightSum="1"
    android:onClick="openLightBoard">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.10">

        <TextView
            android:text="@string/flashlight_txt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_color"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/flashOnOffButton"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:onClick="turnFlashlightOnOff" />

        <ImageView
            android:layout_width="82dp"
            android:layout_height="55dp"
            android:id="@+id/flashlightImage"
            android:contentDescription="@string/flashlightImgDesc"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/flashOnOffButton"
            android:layout_marginTop="25dp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:id="@+id/dividerImage"
        android:contentDescription="@string/divImageTxt" />

    <TextView
        android:layout_width="15dp"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/space"
        android:layout_gravity="center|start" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.75">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Light_board_txt"
            android:textColor="@color/font_color"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_lb_button_txt"
                android:id="@+id/openLightBoardButton"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:onClick="openLightBoard" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/set_color_txt"
                android:textColor="@color/font_color"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/colorPreview" />

            <SurfaceView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:id="@+id/colorPreview"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1"
            android:baselineAligned="false">


            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.26">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/red_txt"
                    android:id="@+id/redTxt"
                    android:textColor="@color/font_color"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:background="@color/font_color"
                    android:id="@+id/redNumberPicker"
                    android:layout_below="@+id/redTxt"/>
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.26">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/green_txt"
                    android:id="@+id/greenTxt"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/font_color"
                    android:layout_centerHorizontal="true" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:background="@color/font_color"
                    android:id="@+id/greenNumberPicker"
                    android:layout_below="@+id/greenTxt" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.26">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/blue_txt"
                    android:id="@+id/blueTxt"
                    android:textColor="@color/font_color"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:background="@color/font_color"
                    android:id="@+id/blueNumberPicker"
                    android:layout_below="@+id/blueTxt" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.26">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alpha_txt"
                    android:textColor="@color/font_color"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/alphaTxt" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:background="@color/font_color"
                    android:id="@+id/alphaNumberPicker"
                    android:layout_below="@+id/alphaTxt" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
