<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:weightSum="1">

    <TextView
        android:text="@string/flashlight_txt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/font_color"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flashOnOffButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="66dp" />

        <ImageView
            android:layout_width="82dp"
            android:layout_height="55dp"
            android:id="@+id/flashlightImage"
            android:layout_marginEnd="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/flashlightImgDesc" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/space"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:id="@+id/dividerImage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/space"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Light_board_txt"
        android:textColor="@color/font_color"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_lb_button_txt"
        android:id="@+id/openLightBoardButton"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/space"
        android:layout_gravity="center_horizontal" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_color_txt"
            android:textColor="@color/font_color"
            android:id="@+id/textView" />

        <SurfaceView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/colorPreview"
            android:layout_gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginStart="55dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/space"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.36"
        android:weightSum="1">


        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.26">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/red_txt"
                android:textColor="@color/font_color"
                android:layout_above="@+id/redNumberPicker"
                android:layout_centerHorizontal="true" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@color/font_color"
                android:id="@+id/redNumberPicker"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.26">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/green_txt"
                android:layout_above="@+id/greenNumberPicker"
                android:textColor="@color/font_color"
                android:layout_centerHorizontal="true" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@color/font_color"
                android:id="@+id/greenNumberPicker"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.26">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/blue_txt"
                android:textColor="@color/font_color"
                android:layout_above="@+id/blueNumberPicker"
                android:layout_centerHorizontal="true" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@color/font_color"
                android:id="@+id/blueNumberPicker"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.26">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alpha_txt"
                android:textColor="@color/font_color"
                android:layout_above="@+id/alphaNumberPicker"
                android:layout_centerHorizontal="true" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@color/font_color"
                android:id="@+id/alphaNumberPicker"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
